--- a/styles.css
+++ b/styles.css
@@ -138,7 +138,7 @@ body {
   text-align: center;
 }
 
-/* .contact-header h2 {
+.contact-header h2 {
   text-align: center;
   font-weight: 400;
   margin-top: 40px;
@@ -177,7 +177,7 @@ textarea {
   padding: 10px;
   font-size: 0.8rem;
   border-radius: 25px;
-  background-color: #4d4d4d;
+  background-color: #9d9d9d;
   color: white;
   transition: background-color 0.3s, color 0.3s;
   margin-top: 15px;
@@ -187,7 +187,7 @@ textarea {
 
 .submit-button:hover {
   background-color: #333;
-} */
+}
 
 #myBtn {
   display: none;
@@ -251,7 +251,7 @@ footer p {
     box-sizing: border-box;
   }
 
-  /* .form {
+  .form {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -262,7 +262,7 @@ footer p {
   input[type="email"],
   textarea {
     width: 600px;
-  } */
+  }
 }
 
 /* Medium devices such as tablets (768px and up) */
